<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.PS_2017_174_RestAPI.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textView_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Post Details "
            app:layout_anchor="@+id/appBarLayout"
            app:layout_anchorGravity="center"
            android:padding="20px"
            android:layout_marginLeft="30px"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearlayout_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/button_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50px"
            android:text="@string/title"
            app:layout_constraintBottom_toTopOf="@id/textview_details_postid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_details_postid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:padding="50px"
            app:layout_constraintBottom_toTopOf="@id/textview_details_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_details_title" />

        <TextView
            android:id="@+id/textview_details_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:padding="50px"
            app:layout_constraintBottom_toTopOf="@id/textview_details_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_details_postid" />

        <TextView
            android:id="@+id/textview_details_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:padding="50px"
            app:layout_constraintBottom_toTopOf="@id/button_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_details_body" />

    </LinearLayout>

    <Button
        android:id="@+id/button_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="100px"
        android:text="@string/Comments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_display"/>


</androidx.constraintlayout.widget.ConstraintLayout>